I've imported the version check code wholesale

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,11 @@ metrics {
   enabled = true
 }
 
+# App Versions
+approvedAppVersions {
+  ios = "[3.0.7,)"
+  android = "[5.0.22,)"
+}
 
 # Microservice specific config
 
@@ -178,11 +183,6 @@ microservice {
     service-locator {
       host = localhost
       port = 9602
-    }
-
-    mobile-version-check {
-      host = localhost
-      port = 8244
     }
 
     mobile-paye {
