Updated the RAML and example file for the `startup` endpoint.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -158,7 +158,7 @@ router {
 
 # Feature flags for the mobile apps
 feature {
-  payAsYouEarnV2 = false
+  payAsYouEarnOnDemand = false
 }
 
 api.access.white-list.applicationIds = []
