Added the feature flags to the response and, in the process, converted the implementation of the StartupService to "finally tagless"

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,8 +136,12 @@ approvedAppVersions {
   android = "[5.0.22,)"
 }
 
-# Microservice specific config
+# Feature flags for the mobile apps
+feature {
+  payAsYouEarnOnDemand = false
+}
 
+# Microservice specific config
 auditing {
   enabled = true
   traceRequests = true
