--- a/conf/application.conf
+++ b/conf/application.conf
@@ -205,6 +205,11 @@ microservice {
       port = 8245
     }
 
+    mobile-version-check {
+      host = localhost
+      port = 8244
+    }
+
   }
 }
 
