Rename the flag as per Native Apps

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,7 +138,7 @@ approvedAppVersions {
 
 # Feature flags for the mobile apps
 feature {
-  payAsYouEarnOnDemand = false
+  userPanelSignUp = false
 }
 
 # Microservice specific config
@@ -162,7 +162,7 @@ router {
 
 # Feature flags for the mobile apps
 feature {
-  payAsYouEarnOnDemand = false
+  userPanelSignUp = false
 }
 
 api.access.white-list.applicationIds = []
