Fix service protocol when running locally.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -182,11 +182,13 @@ microservice {
     auth {
       host = localhost
       port = 8500
+      protocol = http
     }
 
     mobile-paye {
       host = localhost
       port = 8247
+      protocol = http
     }
 
     mobile-help-to-save {
@@ -198,11 +200,13 @@ microservice {
     mobile-tax-credits-renewal {
       host = localhost
       port = 8245
+      protocol = http
     }
 
     mobile-version-check {
       host = localhost
       port = 8244
+      protocol = http
     }
 
   }
