--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,7 +138,7 @@ approvedAppVersions {
 
 # Feature flags for the mobile apps
 feature {
-  payAsYouEarnOnDemand = false
+  userPanelSignUp = false
 }
 
 # Microservice specific config
@@ -162,7 +162,7 @@ router {
 
 # Feature flags for the mobile apps
 feature {
-  payAsYouEarnOnDemand = false
+  userPanelSignUp = false
 }
 
 api.access.white-list.applicationIds = []
@@ -182,11 +182,13 @@ microservice {
     auth {
       host = localhost
       port = 8500
+      protocol = http
     }
 
     mobile-paye {
       host = localhost
       port = 8247
+      protocol = http
     }
 
     mobile-help-to-save {
@@ -198,11 +200,13 @@ microservice {
     mobile-tax-credits-renewal {
       host = localhost
       port = 8245
+      protocol = http
     }
 
     mobile-version-check {
       host = localhost
       port = 8244
+      protocol = http
     }
 
   }
