--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2019 HM Revenue & Customs
+# Copyright 2020 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -157,6 +157,9 @@ router {
 # Feature flags for the mobile apps
 feature {
   userPanelSignUp = false
+  helpToSave {
+    enableBadge = false
+  }
 }
 
 api.access.white-list.applicationIds = []
