--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,6 +160,7 @@ feature {
   helpToSave {
     enableBadge = false
   }
+  enablePushNotificationTokenRegistration = false
 }
 
 api.access.white-list.applicationIds = []
