[HMA-2641] Added call to mobile-in-app-messages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -195,6 +195,12 @@ microservice {
       protocol = http
     }
 
+    mobile-in-app-messages {
+      host = localhost
+      port = 8259
+      protocol = http
+    }
+
   }
 }
 
