Revert "[HMA-2679] Removed helpToSaveEnableBadge feature flag (#21)"
This reverts commit cb70611fca80399e352c2eacd355152b10f15614.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -157,6 +157,9 @@ router {
 # Feature flags for the mobile apps
 feature {
   userPanelSignUp = false
+  helpToSave {
+    enableBadge = false
+  }
   enablePushNotificationTokenRegistration = false
 }
 
