[HMA-3270] Added new paperlessAlertDialogues feature flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,6 +161,7 @@ feature {
     enableBadge = false
   }
   enablePushNotificationTokenRegistration = false
+  paperlessAlertDialogues = false
 }
 
 api.access.white-list.applicationIds = []
