[HMA-3284] Added new paperlessAdverts feature flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,6 +162,7 @@ feature {
   }
   enablePushNotificationTokenRegistration = false
   paperlessAlertDialogues = false
+  paperlessAdverts = false
 }
 
 api.access.white-list.applicationIds = []
