[HMA-3870] Add feature flag for help to save adverts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,6 +163,7 @@ feature {
   enablePushNotificationTokenRegistration = false
   paperlessAlertDialogues = false
   paperlessAdverts = false
+  htsAdverts = false
 }
 
 api.access.white-list.applicationIds = []
