--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2020 HM Revenue & Customs
+# Copyright 2021 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -36,16 +36,16 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 play.modules.enabled += "uk.gov.hmrc.mobilestartup.config.GuiceModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.backend.filters.BackendFilters"
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Play Modules
 # ~~~~
@@ -84,7 +84,7 @@ application.langs = "en"
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-application.router = prod.Routes
+play.http.router = prod.Routes
 
 
 # Controller
@@ -164,6 +164,7 @@ feature {
   paperlessAlertDialogues = false
   paperlessAdverts = false
   htsAdverts = false
+  annualTaxSummaryLink = true
 }
 
 api.access.white-list.applicationIds = []
