[HMA-4022][HMA-3215] switched feature flag off

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -164,7 +164,7 @@ feature {
   paperlessAlertDialogues = false
   paperlessAdverts = false
   htsAdverts = false
-  annualTaxSummaryLink = true
+  annualTaxSummaryLink = false
 }
 
 api.access.white-list.applicationIds = []
