HMA-4118: Added a duplicate paperless alert feature flag for iOS bug

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,6 +162,7 @@ feature {
   }
   enablePushNotificationTokenRegistration = false
   paperlessAlertDialogues = false
+  paperlessAlertDialogs = false
   paperlessAdverts = false
   htsAdverts = false
   annualTaxSummaryLink = false
