[HMA-4768] Get user's name from citizen-details for startup response

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -206,6 +206,12 @@ microservice {
       protocol = http
     }
 
+    citizen-details {
+      host = localhost
+      port = 9337
+      protocol = http
+    }
+
   }
 }
 
