[HMA-4884] Get Enrolment status

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -211,6 +211,12 @@ microservice {
       protocol = http
     }
 
+    enrolment-store-proxy {
+      host = localhost
+      port = 7775
+      protocol = http
+    }
+
   }
 }
 
