[HMA-4884] Get Enrolment Status (#45)
* [HMA-4884] Get Enrolment status

* [HMA-4884] Get Enrolment status

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,11 +130,6 @@ metrics {
   enabled = true
 }
 
-# Feature flags for the mobile apps
-feature {
-  userPanelSignUp = false
-}
-
 # Microservice specific config
 auditing {
   enabled = true
@@ -208,6 +203,12 @@ microservice {
     citizen-details {
       host = localhost
       port = 9337
+      protocol = http
+    }
+
+    enrolment-store-proxy {
+      host = localhost
+      port = 7775
       protocol = http
     }
 
