--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,6 +160,7 @@ feature {
   paperlessAdverts = false
   htsAdverts = false
   annualTaxSummaryLink = false
+  saTile = false
 }
 
 api.access.white-list.applicationIds = []
