[HMA-6854] Add urls to startup response

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2022 HM Revenue & Customs
+# Copyright 2023 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -221,6 +221,13 @@ http-verbs {
       enabled = true
     }
   }
+}
+
+url {
+  cbProofOfEntitlementUrl = "/child-benefit/view-proof-entitlement"
+  cbProofOfEntitlementUrlCy = "/child-benefit/view-proof-entitlement"
+  cbPaymentHistoryUrl = "/child-benefit/view-payment-history"
+  cbPaymentHistoryUrlCy = "/child-benefit/view-payment-history"
 }
 
 enableMultipleGGIDCheck = false
