--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2022 HM Revenue & Customs
+# Copyright 2023 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -160,6 +160,7 @@ feature {
   paperlessAdverts = false
   htsAdverts = false
   annualTaxSummaryLink = false
+  payeCustomerSatisfactionSurveyAdverts = false
 }
 
 api.access.white-list.applicationIds = []
