[HMA-6903] Add survey feature flags

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -153,6 +153,14 @@ feature {
   htsAdverts = false
   annualTaxSummaryLink = false
   payeCustomerSatisfactionSurveyAdverts = false
+  selfAssessmentCustomerSatisfactionSurveyAdverts = false
+  selfAssessmentPaymentsCustomerSatisfactionSurveyAdverts = false
+  taxCreditsCustomerSatisfactionSurveyAdverts = false
+  helpToSaveCustomerSatisfactionSurveyAdverts = false
+  messagesCustomerSatisfactionSurveyAdverts = false
+  formTrackerCustomerSatisfactionSurveyAdverts = false
+  taxCalculatorCustomerSatisfactionSurveyAdverts = false
+  yourDetailsCustomerSatisfactionSurveyAdverts = false
 }
 
 api.access.white-list.applicationIds = []
