--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,6 +161,7 @@ feature {
   formTrackerCustomerSatisfactionSurveyAdverts = false
   taxCalculatorCustomerSatisfactionSurveyAdverts = false
   yourDetailsCustomerSatisfactionSurveyAdverts = false
+  findMyNinoAddToAppleWallet = false
 }
 
 api.access.white-list.applicationIds = []
