Updated feature flag for apple wallet work

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,7 +161,7 @@ feature {
   formTrackerCustomerSatisfactionSurveyAdverts = false
   taxCalculatorCustomerSatisfactionSurveyAdverts = false
   yourDetailsCustomerSatisfactionSurveyAdverts = false
-  findMyNinoAddToAppleWallet = false
+  findMyNinoAddToWallet = false
 }
 
 api.access.white-list.applicationIds = []
