Added in new feature switch for payeYourEmploymentIncomeChart

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,6 +162,7 @@ feature {
   taxCalculatorCustomerSatisfactionSurveyAdverts = false
   yourDetailsCustomerSatisfactionSurveyAdverts = false
   findMyNinoAddToWallet = false
+  payeYourEmploymentIncomeChart = false
 }
 
 api.access.white-list.applicationIds = []
