--- a/conf/application.conf
+++ b/conf/application.conf
@@ -162,7 +162,7 @@ feature {
   taxCalculatorCustomerSatisfactionSurveyAdverts = false
   yourDetailsCustomerSatisfactionSurveyAdverts = false
   findMyNinoAddToWallet = false
-  payeYourEmploymentIncomeChart = false
+  disableYourEmploymentIncomeChart = true
 }
 
 api.access.white-list.applicationIds = []
