Updated wrong spelling for payAsYouEarn

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,7 @@ feature {
   annualTaxSummaryLink = false
   customerSatisfactionSurvey {
     childBenefit = false
-    payeAsYouEarn = false
+    payAsYouEarn = false
     selfAssessment = false
     selfAssessmentPayments = false
     taxCredits = false
