Removed all customer satisfaction feature flags and replaced with new ones

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,19 +152,9 @@ feature {
   paperlessAdverts = false
   htsAdverts = false
   annualTaxSummaryLink = false
-  customerSatisfactionSurvey {
-    childBenefit = false
-    payAsYouEarn = false
-    selfAssessment = false
-    selfAssessmentPayments = false
-    taxCredits = false
-    helpToSave = false
-    messages = false
-    formTracker = false
-    taxCalculator = false
-    yourDetails = false
-    signingIntoTheApp = false
-  }
+  payeCustomerSatisfactionSurveyAdverts = false
+  selfAssessmentPaymentsCustomerSatisfactionSurveyAdverts = false
+  customerSatisfactionSurveys = false
   findMyNinoAddToWallet = false
   disableYourEmploymentIncomeChart = true
 }
