Add google wallet feature flag to mobile-startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -157,6 +157,7 @@ feature {
   customerSatisfactionSurveys = false
   findMyNinoAddToWallet = false
   disableYourEmploymentIncomeChart = true
+  findMyNinoAddToGoogleWallet = false
 }
 
 api.access.white-list.applicationIds = []
