[HMA-7618] Add new paye income chart flag for Android

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -125,7 +125,6 @@ metrics {
 # Microservice specific config
 auditing {
   enabled = true
-  traceRequests = true
   consumer {
     baseUri {
       host = localhost
@@ -157,6 +156,7 @@ feature {
   customerSatisfactionSurveys = false
   findMyNinoAddToWallet = false
   disableYourEmploymentIncomeChart = true
+  disableYourEmploymentIncomeChartAndroid = true
   findMyNinoAddToGoogleWallet = false
 }
 
