[HMA-7814] Add new disablePayeChartIos flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -157,6 +157,7 @@ feature {
   findMyNinoAddToWallet = false
   disableYourEmploymentIncomeChart = true
   disableYourEmploymentIncomeChartAndroid = true
+  disableYourEmploymentIncomeChartIos = true
   findMyNinoAddToGoogleWallet = false
 }
 
