--- a/conf/application.conf
+++ b/conf/application.conf
@@ -170,6 +170,11 @@ microservice {
       protocol = http
     }
 
+    mobile-shuttering {
+      host = localhost
+      port = 8253
+    }
+
   }
 }
 
