[HMA-8890] Add credId to preflight response

--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -191,12 +191,14 @@ paths:
                 example-1:
                   value:
                     nino: CS700100A
+                    credId: 14453461234
                     routeToIV: false
                     routeToTEN: false
                 example-2:
                   value:
                     nino: CS700100A
                     routeToIV: true
+                    credId: 14453461234
                     annualTaxSummaryLink:
                       link: /
                       destination: PAYE
@@ -242,6 +244,8 @@ components:
           $ref: '#/components/schemas/Utr'
         routeToTEN:
           type: boolean
+        credId:
+          type: string
       example:
         nino: CS700100A
         routeToIV: false
