[HMA-8890] Return Sandbox data when Demo account IDs found

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -190,3 +190,8 @@ enableMultipleGGIDCheck {
   ios = false
   android = false
 }
+
+demoAccounts {
+  storeReviewId = "Int-6eb99306-a41c-4abe-978b-e966b2edad9b"
+  appTeamId = "Int-4a2a6779-cb4c-4710-8be4-2c3a71adf912"
+}
