Bootstrap dependency upgrade

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ play.http.requestHandler = "uk.gov.hmrc.api.sandbox.RoutingHttpRequestHandler"
 play.modules.enabled += "uk.gov.hmrc.mobilestartup.config.GuiceModule"
 
 # Default http client
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
