--- a/conf/application.conf
+++ b/conf/application.conf
@@ -127,6 +127,7 @@ feature {
   disableYourEmploymentIncomeChartAndroid = true
   disableYourEmploymentIncomeChartIos = true
   findMyNinoAddToGoogleWallet = false
+  disableOldTaxCalculator = true
 }
 
 microservice {
