--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,6 +128,7 @@ feature {
   disableYourEmploymentIncomeChartIos = true
   findMyNinoAddToGoogleWallet = false
   disableOldTaxCalculator = true
+  devUseNudgeComm = true
 }
 
 microservice {
