HMA-9359 add new flag devUseNudgeComm and set to true

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -128,7 +128,7 @@ feature {
   disableYourEmploymentIncomeChartIos = true
   findMyNinoAddToGoogleWallet = false
   disableOldTaxCalculator = true
-  devUseNudgeComm = true
+  useNudgeComm = true
 }
 
 microservice {
