HMA-9358 change of bank URL flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,7 @@ feature {
   findMyNinoAddToGoogleWallet = false
   disableOldTaxCalculator = true
   useNudgeComm = true
+  cbChangeBankAccountUrl = false
 }
 
 microservice {
