--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,7 @@ feature {
   findMyNinoAddToGoogleWallet = false
   disableOldTaxCalculator = true
   useNudgeComm = true
+  cbChangeOfBankUrl = false
 }
 
 microservice {
