HMA-9435 Enable tax credit banner

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,7 @@ feature {
   disableOldTaxCalculator = true
   useNudgeComm = true
   cbChangeOfBankUrl = false
+  enableTaxCreditEndBanner = true
 }
 
 microservice {
