HMA-9461 PoE URL flag Moblie-startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,7 @@ feature {
   disableOldTaxCalculator = true
   useNudgeComm = true
   enableChangeOfBankPegaURL = false
+  enableProofOfEntitlementPegaURL = false
   enableTaxCreditEndBanner = true
 }
 
