HMA-9401 Added a service flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -131,6 +131,7 @@ feature {
   useNudgeComm = true
   enableChangeOfBankPegaURL = false
   enableProofOfEntitlementPegaURL = false
+  devEnablePegaDigitalService = false
   enableTaxCreditEndBanner = true
 }
 
