--- a/conf/application.conf
+++ b/conf/application.conf
@@ -133,6 +133,7 @@ feature {
   enableProofOfEntitlementPegaURL = false
   devEnablePegaDigitalService = false
   enableTaxCreditEndBanner = true
+  enableBPPCardViews = false
 }
 
 microservice {
