HMA-9738 flag devEnableChildBenefitMVP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,6 +135,7 @@ feature {
   enableTaxCreditEndBanner = true
   devEnableChildBenefitPegaService = false
   enableBPPCardViews = false
+  devEnableChildBenefitMVP = false
 }
 
 microservice {
