HMA-9897 HMA-9897 Added feature flags for tax credit shuttering

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -137,9 +137,9 @@ feature {
   enableUniversalPensionTaxCredit = false
 }
 
-time {
-  serviceFlagStartTime = "2025-04-05T23:59"
-  serviceFlagEndTime = "2025-04-07T10:00"
+taxCreditShutterTimings {
+  startTime = "2025-04-05T23:59"
+  endTime = "2025-04-07T10:00"
 }
 
 microservice {
