--- a/conf/application.conf
+++ b/conf/application.conf
@@ -133,6 +133,13 @@ feature {
   enableProofOfEntitlementPegaURL = false
   enableTaxCreditEndBanner = true
   enableBPPCardViews = false
+  enableTaxCreditShuttering = false
+  enableUniversalPensionTaxCredit = false
+}
+
+taxCreditShutterTimings {
+  startTime = "2025-04-05T23:59"
+  endTime = "2025-04-07T10:00"
 }
 
 microservice {
