HMA-9894 hts banner display flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,11 +135,17 @@ feature {
   enableBPPCardViews = false
   enableTaxCreditShuttering = false
   enableUniversalPensionTaxCredit = false
+  enableHtsBanner = false
 }
 
 taxCreditShutterTimings {
   startTime = "2025-04-05T23:59"
   endTime = "2025-04-07T10:00"
+}
+
+htsBannerDisplayTimings {
+  startTime = "2025-04-05T23:59"
+  endTime = "2025-05-04T00:00"
 }
 
 microservice {
