HMA-9897 remove dynamic timimgs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -133,9 +133,9 @@ feature {
   enableProofOfEntitlementPegaURL = false
   enableTaxCreditEndBanner = true
   enableBPPCardViews = false
-  enableTaxCreditShuttering = false
+  enableTaxCreditShuttering = true
   enableUniversalPensionTaxCreditBanner = false
-  enableHtsBanner = false
+  enableHtsBanner = true
 }
 
 taxCreditShutterTimings {
