--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,17 +135,13 @@ feature {
   enableBPPCardViews = false
   enableTaxCreditShuttering = true
   enableUniversalPensionTaxCreditBanner = false
-  enableHtsBanner = true
+  enableHtsBanner = false
 }
 
-taxCreditShutterTimings {
-  startTime = "2025-04-05T23:59"
-  endTime = "2025-04-07T10:00"
-}
 
 htsBannerDisplayTimings {
-  startTime = "2025-04-05T23:59"
-  endTime = "2025-05-04T00:00"
+  startTime = "2025-04-06T08:59"
+  endTime = "2025-04-07T00:00"
 }
 
 microservice {
