--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,6 +136,7 @@ feature {
   enableTaxCreditShuttering = true
   enableUniversalPensionTaxCreditBanner = false
   enableHtsBanner = false
+  devEnableChildBenefitMVP = false
 }
 
 
