HMA-10133 added new flag enableChildBenefitMVP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,7 +136,7 @@ feature {
   enableTaxCreditShuttering = true
   enableUniversalPensionTaxCreditBanner = false
   enableHtsBanner = false
-  devEnableChildBenefitMVP = false
+  enableChildBenefitMVP = false
 }
 
 
