HMA-10821 new flag for plan type 5

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,6 +136,7 @@ feature {
   enableUniversalPensionTaxCreditBanner = false
   enableHtsBanner = false
   enableChildBenefitMVP = false
+  enableStudentLoanPlanTypeFive = false
 }
 
 
