--- a/conf/application.conf
+++ b/conf/application.conf
@@ -137,6 +137,7 @@ feature {
   enableHtsBanner = false
   enableChildBenefitMVP = false
   enableStudentLoanPlanTypeFive = false
+  enablePinSecurity = false
 }
 
 
