--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,6 +138,7 @@ feature {
   enableChildBenefitMVP = false
   enableStudentLoanPlanTypeFive = false
   enablePinSecurity = false
+  enableNewCreatePINScreenFlow = false
 }
 
 
