HMA-10893 flag enableSACessation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -137,7 +137,7 @@ feature {
   enableHtsBanner = false
   enableChildBenefitMVP = false
   enableStudentLoanPlanTypeFive = false
- 
+  enableSACessation = false
 }
 
 
