HMA-11034 Added enableAdditionalIncome flag to startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,6 +138,7 @@ feature {
   enableChildBenefitMVP = false
   enableStudentLoanPlanTypeFive = false
   enableSACessation = false
+  enableAdditionalIncome = false
 }
 
 
