HMA-11047 Added SA Cessation throttle to mobile-startup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -141,6 +141,10 @@ feature {
   enableAdditionalIncome = false
 }
 
+throttleValue {
+  SACessationthrottle = 0
+}
+
 
 htsBannerDisplayTimings {
   startTime = "2025-04-06T08:59"
